# specx_simulator

./: .coveragerc  .editorconfig  Makefile  README.md  canvas.py  dialogo.py  distro.py  generators.py  gui_qt.py  json_manager.py  mainframe.py  pyproject.toml  requirements.txt  setup.py  signals.py  threads.py
.github/workflows/: black.yml  tests.yml
config/: Alborada_energy_afternoon.json  Alborada_energy_evening.json  Alborada_energy_morning.json  Alborada_ocupation_afternoon.json  Alborada_ocupation_evening.json  Alborada_ocupation_morning.json  Barcelona_energy_afternoon.json  Barcelona_energy_evening.json  Barcelona_energy_morning.json  Barcelona_ocupation_afternoon.json  Barcelona_ocupation_evening.json  Barcelona_ocupation_morning.json  Barzal_energy_afternoon.json  Barzal_energy_evening.json  Barzal_energy_morning.json  Barzal_ocupation_afternoon.json  Barzal_ocupation_evening.json  Barzal_ocupation_morning.json  default_test.json  distributions.json
data/: continuous_probability_distributions.json
environments/: test.json
src/: app.py  dialogs.py  main.py  simulator.py  specx.py  test.py
src/charts/: abc.py  base.py  cartesian.py  charts.py  exceptions.py  visualization.py
src/constants/: charts.py  distributions.py  field_names.py  messages.py  paths.py  simulation.py  ui.py
src/controllers/: simulation_channel_controller.py  simulator_controller.py
src/exceptions/: statistic.py
src/model/: generators.py  simulation.py
src/models/: distribution.py  distributions.py  simulation.py
src/qt/: dialog.py  mainview.py  simulator.py
src/specx/: app.py  exceptions.py
src/statistics/: generators.py  (+1 more)
tests/: base.py  utils.py
ui/: Dialog.ui  GUI.ui  dialog.ui  icons.qrc  main_window.ui
(+60 files in other folders)
